--- a/archives/toutiao-search/2023-11-20.md
+++ b/archives/toutiao-search/2023-11-20.md
@@ -1,19 +1,19 @@
 # 2023-11-20
 
-共 67 条
+共 75 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 20 2023 03:00:36 GMT+0800 (China Standard Time) -->
-1. [记者：国足战韩国输两三球算正常](https://so.toutiao.com/search?keyword=记者：国足战韩国输两三球算正常)
+<!-- 最后更新时间 Mon Nov 20 2023 04:00:54 GMT+0800 (China Standard Time) -->
 1. [男子丢30万手机女子捡到以为老年机](https://so.toutiao.com/search?keyword=男子丢30万手机女子捡到以为老年机)
-1. [我国候鸟种群数量实现持续增长](https://so.toutiao.com/search?keyword=我国候鸟种群数量实现持续增长)
-1. [油价将调整 加50升油或省13.5-15元](https://so.toutiao.com/search?keyword=油价将调整+加50升油或省13.5-15元)
-1. [茅奖得主揭秘《宝水》中的原型人物](https://so.toutiao.com/search?keyword=茅奖得主揭秘《宝水》中的原型人物)
-1. [APEC刚结束 消失的流浪汉又回来了](https://so.toutiao.com/search?keyword=APEC刚结束+消失的流浪汉又回来了)
 1. [女子婚内出轨后想带私生子回归家庭](https://so.toutiao.com/search?keyword=女子婚内出轨后想带私生子回归家庭)
-1. [网红夫妇售楼部维权被打 当事人回应](https://so.toutiao.com/search?keyword=网红夫妇售楼部维权被打+当事人回应)
-1. [马航MH370事件有哪些谜团被揭开](https://so.toutiao.com/search?keyword=马航MH370事件有哪些谜团被揭开)
+1. [我国候鸟种群数量实现持续增长](https://so.toutiao.com/search?keyword=我国候鸟种群数量实现持续增长)
+1. [茅奖得主揭秘《宝水》中的原型人物](https://so.toutiao.com/search?keyword=茅奖得主揭秘《宝水》中的原型人物)
+1. [油价将调整 加50升油或省13.5-15元](https://so.toutiao.com/search?keyword=油价将调整+加50升油或省13.5-15元)
 1. [马斯克称将提起“核弹式诉讼”](https://so.toutiao.com/search?keyword=马斯克称将提起“核弹式诉讼”)
+1. [克林斯曼：非常渴望击败中国队](https://so.toutiao.com/search?keyword=克林斯曼：非常渴望击败中国队)
+1. [网友称银行取款机按键4跟新的一样](https://so.toutiao.com/search?keyword=网友称银行取款机按键4跟新的一样)
+1. [《地心引力》：用技术引领艺术](https://so.toutiao.com/search?keyword=《地心引力》：用技术引领艺术)
+1. [男子被拐33年后因入狱采血找到亲父母](https://so.toutiao.com/search?keyword=男子被拐33年后因入狱采血找到亲父母)
 1. [深圳停发失业保险金？官方辟谣](https://so.toutiao.com/search?keyword=深圳停发失业保险金？官方辟谣)
 1. [以军袭击难民营一学校 哈马斯回应](https://so.toutiao.com/search?keyword=以军袭击难民营一学校+哈马斯回应)
 1. [李佳航恭喜T1夺冠](https://so.toutiao.com/search?keyword=李佳航恭喜T1夺冠)
@@ -21,38 +21,48 @@
 1. [业主将车停在车位上频频遭开门杀](https://so.toutiao.com/search?keyword=业主将车停在车位上频频遭开门杀)
 1. [郭富城赛车场失控撞车](https://so.toutiao.com/search?keyword=郭富城赛车场失控撞车)
 1. [文章马伊琍一家四口罕见同框](https://so.toutiao.com/search?keyword=文章马伊琍一家四口罕见同框)
+1. [胡歌刘涛争论野外用完厕纸是否带走](https://so.toutiao.com/search?keyword=胡歌刘涛争论野外用完厕纸是否带走)
 1. [演员董晴结婚](https://so.toutiao.com/search?keyword=演员董晴结婚)
-1. [女子9年花费近27万吃海底捞](https://so.toutiao.com/search?keyword=女子9年花费近27万吃海底捞)
 1. [父女对话聊爸爸心中唯一的美女是谁](https://so.toutiao.com/search?keyword=父女对话聊爸爸心中唯一的美女是谁)
 1. [以色列哈马斯或将达成临时停火协议](https://so.toutiao.com/search?keyword=以色列哈马斯或将达成临时停火协议)
-1. [网友称银行取款机按键4跟新的一样](https://so.toutiao.com/search?keyword=网友称银行取款机按键4跟新的一样)
-1. [13年一遇的苗寨鼓藏节](https://so.toutiao.com/search?keyword=13年一遇的苗寨鼓藏节)
-1. [以总理首次承认可能会失去国际支持](https://so.toutiao.com/search?keyword=以总理首次承认可能会失去国际支持)
-1. [胡歌刘涛争论野外用完厕纸是否带走](https://so.toutiao.com/search?keyword=胡歌刘涛争论野外用完厕纸是否带走)
-1. [克林斯曼：非常渴望击败中国队](https://so.toutiao.com/search?keyword=克林斯曼：非常渴望击败中国队)
-1. [埃尔多安称以总理“末日即将来临”](https://so.toutiao.com/search?keyword=埃尔多安称以总理“末日即将来临”)
-1. [6岁女孩想做演员在横店当“童漂”](https://so.toutiao.com/search?keyword=6岁女孩想做演员在横店当“童漂”)
 1. [山东冠县：严厉整治配阴婚行为](https://so.toutiao.com/search?keyword=山东冠县：严厉整治配阴婚行为)
-1. [韩媒：中国队“少林足球”臭名昭著](https://so.toutiao.com/search?keyword=韩媒：中国队“少林足球”臭名昭著)
-1. [郑州铁路回应网传“火车着火”视频](https://so.toutiao.com/search?keyword=郑州铁路回应网传“火车着火”视频)
-1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
-1. [男乘客拍打女列车员臀部被拘10日](https://so.toutiao.com/search?keyword=男乘客拍打女列车员臀部被拘10日)
-1. [冲锋衣销量猛涨](https://so.toutiao.com/search?keyword=冲锋衣销量猛涨)
-1. [75岁司机遇溜车用肉身挡车被压身亡](https://so.toutiao.com/search?keyword=75岁司机遇溜车用肉身挡车被压身亡)
-1. [女子摆拍300斤大葱不到40元被约谈](https://so.toutiao.com/search?keyword=女子摆拍300斤大葱不到40元被约谈)
-1. [亏764亿的蔚来汽车会不会倒闭](https://so.toutiao.com/search?keyword=亏764亿的蔚来汽车会不会倒闭)
-1. [我国30%糖尿病患者或出现糖尿病足](https://so.toutiao.com/search?keyword=我国30%糖尿病患者或出现糖尿病足)
+1. [女子9年花费近27万吃海底捞](https://so.toutiao.com/search?keyword=女子9年花费近27万吃海底捞)
+1. [埃尔多安称以总理“末日即将来临”](https://so.toutiao.com/search?keyword=埃尔多安称以总理“末日即将来临”)
+1. [乌称逼退第聂伯河东岸俄军3至8公里](https://so.toutiao.com/search?keyword=乌称逼退第聂伯河东岸俄军3至8公里)
+1. [马航MH370事件有哪些谜团被揭开](https://so.toutiao.com/search?keyword=马航MH370事件有哪些谜团被揭开)
+1. [以总理首次承认可能会失去国际支持](https://so.toutiao.com/search?keyword=以总理首次承认可能会失去国际支持)
 1. [男子钱塘江边撒网捕鱼被卷走](https://so.toutiao.com/search?keyword=男子钱塘江边撒网捕鱼被卷走)
-1. [《地心引力》：用技术引领艺术](https://so.toutiao.com/search?keyword=《地心引力》：用技术引领艺术)
-1. [蔚来总裁回应倒闭质疑：绝无可能](https://so.toutiao.com/search?keyword=蔚来总裁回应倒闭质疑：绝无可能)
-1. [男子被拐33年后因入狱采血找到亲父母](https://so.toutiao.com/search?keyword=男子被拐33年后因入狱采血找到亲父母)
+1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
 1. [华为生态链热度持续扩散](https://so.toutiao.com/search?keyword=华为生态链热度持续扩散)
+1. [台湾富豪命丧曼谷酒店疑涉洗钱](https://so.toutiao.com/search?keyword=台湾富豪命丧曼谷酒店疑涉洗钱)
+1. [75岁司机遇溜车用肉身挡车被压身亡](https://so.toutiao.com/search?keyword=75岁司机遇溜车用肉身挡车被压身亡)
+1. [幼女被介绍卖淫 案犯再审改判7年](https://so.toutiao.com/search?keyword=幼女被介绍卖淫+案犯再审改判7年)
 1. [犹大财团先锋领航败走中国](https://so.toutiao.com/search?keyword=犹大财团先锋领航败走中国)
 1. [江口沉银遗址已出水文物7.6万余件](https://so.toutiao.com/search?keyword=江口沉银遗址已出水文物7.6万余件)
+1. [男乘客拍打女列车员臀部被拘10日](https://so.toutiao.com/search?keyword=男乘客拍打女列车员臀部被拘10日)
+1. [德约辛纳会师总决赛之巅](https://so.toutiao.com/search?keyword=德约辛纳会师总决赛之巅)
+1. [我国30%糖尿病患者或出现糖尿病足](https://so.toutiao.com/search?keyword=我国30%糖尿病患者或出现糖尿病足)
 1. [全新一代丰田凯美瑞亮相广州车展](https://so.toutiao.com/search?keyword=全新一代丰田凯美瑞亮相广州车展)
-1. [龙年发射的神十九任务标识真有条龙](https://so.toutiao.com/search?keyword=龙年发射的神十九任务标识真有条龙)
-1. [克宫：普京掌握情报西方或会搞破坏](https://so.toutiao.com/search?keyword=克宫：普京掌握情报西方或会搞破坏)
+1. [亏764亿的蔚来汽车会不会倒闭](https://so.toutiao.com/search?keyword=亏764亿的蔚来汽车会不会倒闭)
+1. [马斯克：X公司投资者将拥有xAI股份](https://so.toutiao.com/search?keyword=马斯克：X公司投资者将拥有xAI股份)
+1. [冲锋衣销量猛涨](https://so.toutiao.com/search?keyword=冲锋衣销量猛涨)
+1. [蔚来总裁回应倒闭质疑：绝无可能](https://so.toutiao.com/search?keyword=蔚来总裁回应倒闭质疑：绝无可能)
+1. [媒体解读大批艺人停止直播带货](https://so.toutiao.com/search?keyword=媒体解读大批艺人停止直播带货)
 1. [上海明确下月起全面禁用“生鲜灯”](https://so.toutiao.com/search?keyword=上海明确下月起全面禁用“生鲜灯”)
+1. [券商板块累计回购11.73亿元](https://so.toutiao.com/search?keyword=券商板块累计回购11.73亿元)
+1. [听董宇辉怎么描述板栗](https://so.toutiao.com/search?keyword=听董宇辉怎么描述板栗)
+1. [重庆下月起违规用生鲜灯最高罚3万](https://so.toutiao.com/search?keyword=重庆下月起违规用生鲜灯最高罚3万)
+1. [欧文：开局不利时我让自己不要沮丧](https://so.toutiao.com/search?keyword=欧文：开局不利时我让自己不要沮丧)
+1. [克宫：普京掌握情报西方或会搞破坏](https://so.toutiao.com/search?keyword=克宫：普京掌握情报西方或会搞破坏)
+1. [记者：国足战韩国输两三球算正常](https://so.toutiao.com/search?keyword=记者：国足战韩国输两三球算正常)
+1. [APEC刚结束 消失的流浪汉又回来了](https://so.toutiao.com/search?keyword=APEC刚结束+消失的流浪汉又回来了)
+1. [网红夫妇售楼部维权被打 当事人回应](https://so.toutiao.com/search?keyword=网红夫妇售楼部维权被打+当事人回应)
+1. [13年一遇的苗寨鼓藏节](https://so.toutiao.com/search?keyword=13年一遇的苗寨鼓藏节)
+1. [6岁女孩想做演员在横店当“童漂”](https://so.toutiao.com/search?keyword=6岁女孩想做演员在横店当“童漂”)
+1. [韩媒：中国队“少林足球”臭名昭著](https://so.toutiao.com/search?keyword=韩媒：中国队“少林足球”臭名昭著)
+1. [郑州铁路回应网传“火车着火”视频](https://so.toutiao.com/search?keyword=郑州铁路回应网传“火车着火”视频)
+1. [女子摆拍300斤大葱不到40元被约谈](https://so.toutiao.com/search?keyword=女子摆拍300斤大葱不到40元被约谈)
+1. [龙年发射的神十九任务标识真有条龙](https://so.toutiao.com/search?keyword=龙年发射的神十九任务标识真有条龙)
 1. [男子因螺蛳粉里没有螺蛳要求退钱](https://so.toutiao.com/search?keyword=男子因螺蛳粉里没有螺蛳要求退钱)
 1. [《似火流年》被赞有电影质感](https://so.toutiao.com/search?keyword=《似火流年》被赞有电影质感)
 1. [2024款大众ID.3亮相广州车展](https://so.toutiao.com/search?keyword=2024款大众ID.3亮相广州车展)
@@ -63,11 +73,9 @@
 1. [《三大队》群众化身“菜市场判官”](https://so.toutiao.com/search?keyword=《三大队》群众化身“菜市场判官”)
 1. [冬季燃气安全须知](https://so.toutiao.com/search?keyword=冬季燃气安全须知)
 1. [黄子韬演唱会疑因现场抢座出现混乱](https://so.toutiao.com/search?keyword=黄子韬演唱会疑因现场抢座出现混乱)
-1. [台湾富豪命丧曼谷酒店疑涉洗钱](https://so.toutiao.com/search?keyword=台湾富豪命丧曼谷酒店疑涉洗钱)
 1. [本赛季马刺领先到15分的比赛1胜4负](https://so.toutiao.com/search?keyword=本赛季马刺领先到15分的比赛1胜4负)
 1. [美国男子公开二战相册完整电子存档](https://so.toutiao.com/search?keyword=美国男子公开二战相册完整电子存档)
 1. [唐代长安城的人们如何取暖](https://so.toutiao.com/search?keyword=唐代长安城的人们如何取暖)
-1. [幼女被介绍卖淫 案犯再审改判7年](https://so.toutiao.com/search?keyword=幼女被介绍卖淫+案犯再审改判7年)
 1. [工作仅4年 90后干部张文翔落马](https://so.toutiao.com/search?keyword=工作仅4年+90后干部张文翔落马)
 1. [律师：若曼城违反规定降级不可避免](https://so.toutiao.com/search?keyword=律师：若曼城违反规定降级不可避免)
 1. [浙江一家4人查出同种癌 最小才16岁](https://so.toutiao.com/search?keyword=浙江一家4人查出同种癌+最小才16岁)
